@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 30Oct2015 Fix compilation of extrae-cmd in BG/* if PAPI is not set
  * 27Oct2015 Free buffer when pthread routine finishes, not at pthread_join time
              Move MPI_FINALIZE_EV so that it covers instrumentation code
  * 23Oct2015 Waste some CPU time in mpi_ping example for use with extrae_bursts_1ms.xml
